base gulpfile, build and stack close #2 #3 #5

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,2 +1,7 @@
-html
-  body Olá mundo
+html(lang="pt-br")
+  body.page
+    div.container
+      h2 Olá mundo 3>
+      h3 vamos ver
+      p Brasil mostra a sua cara
+
